--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+
+    <!-- Strings for activity_main -->
     <string name="app_name">Rentables</string>
     <string name="login_placeholder">Username</string>
     <string name="password_placeholder">Password</string>
@@ -7,7 +9,7 @@
     <string name="forgot_password"><u>Forgot Password</u></string>
     <string name="no_account">Don\'t have an account?</string>
     <string name="sign_up"><u>SIGN UP</u></string>
-    <string name="dialog_fire_missiles">fire missiles</string>
-    <string name="fire">Fire</string>
-    <string name="cancel">Cancel</string>
+
+    <!-- Strings for activity_forgot_pass-->
+    <string name="enter_username">Please enter your username</string>
 </resources>
